--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ const spots = [
     lng: 134.1692,
     level: 5,
     img: "https://upload.wikimedia.org/wikipedia/commons/e/ef/%E3%82%B9%E3%82%AB%E3%82%A4%E3%83%AC%E3%82%B9%E3%83%88%E3%83%8B%E3%83%A5%E3%83%BC%E3%82%80%E3%82%8D%E3%81%A8_-_panoramio.jpg",
-    desc: "深夜に人影が出ると噂される廃施設。"
+    desc: "怖さレベル：★★★★★
+      <br>深夜に人影が出ると噂される廃施設。"
   },
   {
     name: "足摺岬",
