--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ const spots = [
     lng: 134.1692,
     level: 5,
     img: "https://upload.wikimedia.org/wikipedia/commons/e/ef/%E3%82%B9%E3%82%AB%E3%82%A4%E3%83%AC%E3%82%B9%E3%83%88%E3%83%8B%E3%83%A5%E3%83%BC%E3%82%80%E3%82%8D%E3%81%A8_-_panoramio.jpg",
-    desc: "怖さレベル：★★★★★深夜に人影が出ると噂される廃施設。"
+    desc: "深夜に人影が出ると噂される廃施設。"
   },
   {
     name: "足摺岬",
@@ -241,19 +241,6 @@ function render(data) {
       title:s.name
     });
 
-    const stars = renderStars(spot.level);
-　infoWindow.setContent(`
-  <div style="color:black">
-    <h3>${spot.name}</h3>
-    <p><strong>怖さレベル：</strong>${stars}</p>
-    <p>${spot.desc}</p>
-  </div>
-`);
-
-    function renderStars(level) {
-  return "★".repeat(level) + "☆".repeat(5 - level);
-}
-
     m.addListener("click", () => {
       info.setContent(`
         <div style="max-width:220px; color:#000;">
@@ -271,6 +258,19 @@ function render(data) {
     d.onclick=()=>{ map.setCenter({lat:s.lat,lng:s.lng}); map.setZoom(14); };
     document.getElementById("list").appendChild(d);
   });
+}
+
+      function renderStars(level) {
+  return "★".repeat(level) + "☆".repeat(5 - level);
+
+        const stars = renderStars(spot.level);
+　infoWindow.setContent(`
+  <div style="color:black">
+    <h3>${spot.name}</h3>
+    <p><strong>怖さレベル：</strong>${stars}</p>
+    <p>${spot.desc}</p>
+  </div>
+`);
 }
 
 document.getElementById("search").addEventListener("input",e=>{
